@@ -1,4 +1,5 @@
 2.0.8
+Issue #1812: Allow passing an array of paths to all "font" parameters
 PR #1799 Add support for Service principal in Create-AadAppsForNav
 PR #1801 Support SqlServer PS module in Restore-BcDatabaseFromArtifacts.ps1
 Issue #1794 AssignPremiumPlan fails when using external database
